tests/sintax-semanth/should_fail/test2Wrong.tds
//This test should fail because a bool cannot be added to an integer
program
begin
	bool fun(integer w)
		begin
			integer ab;
			integer bc;

			ab = 5;
			bc = 10;
			return (w == ab + bc);
		end

	bool main()
		begin
			integer h;
			bool w;
			h = 10;
			w = true;

			return fun(h + w);
		end
end